# financial-review-dashboard

./: README.md  package.json
.github/workflows/: build.yml
src/: index.html  script.js  styles.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
