[package]
name = "financial-review-dashboard"
version = "1.0.0"
description = "Financial Review Management Dashboard"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/financial-review-dashboard"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "dialog-all", "fs-all", "path-all", "shell-open"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# This section is used to configure the Tauri bundler
[package.metadata.bundle]
identifier = "com.yourcompany.financial-review-dashboard"
name = "Financial Review Dashboard"
short_description = "Manage financial review schedules and client households"
long_description = """
A comprehensive desktop application for financial advisors to manage client household reviews, 
track schedules, assign monthly reviews, and maintain detailed client data with visual analytics.
"""
category = "Business"
copyright = "Copyright (c) 2025 Your Company Name"
